# hudu-magic

./: .gitignore  4  GETPYTHON.md  LICENSE  README.md  SECURITY.md  build.ps1  build.sh  dev-requirements.txt  generate_endpoints.py  hudu-openapiv1.json  install-python.ps1  install-python.sh  pyproject.toml  testenv.example
.github/workflows/: ci.yml  publish-pypi.yml  python-publish.yml
examples/: basic_usage.py  endpoint_catalog.py  low_level_client.py  move-assetlayouts.py  optional_writes.py  print_available_actions.py  using_labels.py  various_typical_tasks.py
src/hudu_magic/: __init__.py  client.py  constants.py  endpoints.py  exceptions.py  help.py  instance.py  models.py  payloads.py  resources.py  validation.py
src/hudu_magic/helpers/: __init__.py  asset_layouts.py  enums.py  general.py  labels.py
tests/: conftest.py  test_endpoints.py  test_instance.py
tests/integration/: __init__.py  conftest.py  conftests.py  factories.py  helpers.py  plans.py  random_layout.py  test_lifecycle.py  test_live.py
tests/unit/: test_asset_layout_helpers.py  test_client.py  test_client_http.py  test_endpoints.py  test_helpers_general.py  test_instance.py  test_labels.py  test_models_huduobject.py  test_payloads.py  test_procedures.py  test_resources.py
