[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hudu-magic"
version = "v0.4.2411"
description = "Python client library for the Hudu API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Mason Stelter" }
]
keywords = ["hudu", "api", "client", "documentation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

dependencies = [
  "requests>=2.31.0",
  "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "python-dotenv>=1.0.1",
  "ruff>=0.6.0",
  "build>=1.2.0",
  "twine>=5.0.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: calls a live Hudu instance (enable with HUDU_RUN_INTEGRATION=1)",
  "destructive: integration tests that create or change remote data",
]

[tool.ruff]
line-length = 100
target-version = "py310"

